# Protobuf-Xcode

./: CMakeLists.txt  README.md
Protobuf.xcodeproj/: project.pbxproj
Protobuf.xcodeproj/xcshareddata/xcschemes/: Protobuf.xcscheme  libprotobuf-lite.xcscheme
Protobuf.xcodeproj/xcuserdata/pruth.xcuserdatad/xcschemes/: xcschememanagement.plist
include/google/protobuf/: arenastring.h
